<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/moneyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textColor="@color/gray"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/moneyValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxLines="1"
        android:paddingEnd="10dp"
        tools:text="0"
        android:textSize="36sp"
        android:background="@null"
        android:textColor="@color/lifeBlack"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="@+id/moneyTitle"
        app:layout_constraintEnd_toStartOf="@+id/moneyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moneyTitle" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/moneyValue"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="10dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/submitIncomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/deposit" />

        <Button
            android:id="@+id/submitExpenditureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/red"
            android:text="@string/expenditure" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>