<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/daySundayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textColor="@color/red"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/daySundayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1" />

                <ImageView
                    android:id="@+id/daySundayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayMondayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dayMondayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2" />

                <ImageView
                    android:id="@+id/dayMondayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayTuesdayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dayTuesdayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3" />

                <ImageView
                    android:id="@+id/dayTuesdayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayWednesdayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dayWednesdayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4" />

                <ImageView
                    android:id="@+id/dayWednesdayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayThursdayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dayThursdayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5" />

                <ImageView
                    android:id="@+id/dayThursdayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayFridayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dayFridayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="6" />

                <ImageView
                    android:id="@+id/dayFridayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/daySaturdayLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/daySaturdayValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="7" />

                <ImageView
                    android:id="@+id/daySaturdayDrawable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />
            </LinearLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dayMiddleLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <LinearLayout
                android:id="@+id/dayInfoLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/dayIncomeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/dayIncomeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/income" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/dayIncomeValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount0_big"
                            android:textColor="@color/green"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/dayExpenditure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/dayExpenditureTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:text="@string/expenditure" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/dayExpenditureValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount0_big"
                            android:textColor="@color/red"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cash_underbar" />
                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>
                            <TextView
                                android:id="@+id/dayExpenditureCashValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/card_underbar" />
                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>
                            <TextView
                                android:id="@+id/dayExpenditureCardValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/shadow"
                app:layout_constraintTop_toBottomOf="@id/dayInfoLayout" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/dayRestViewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/dayInfoLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButtonDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_send"
        app:tint="@color/white" />
</RelativeLayout>